# Analyse_Sentiments

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  README.txt  dockerfile  final_model.ipynb  mlflow.db  mlflow.ipynb  modelisation.ipynb  nginx.conf  requirements-api.txt  requirements.txt  start.sh
.github/workflows/: deploy.yml  tests.yml
api/: main.py
model/: distilbert_pyfunc.py  final_model.ipynb
model_final/: DISTILBERT_MODEL_FULLY_TRAINED.pt  distilbert_pyfunc.py  log_model_after_mlflow.py  model_loader.py
model_final/DISTILBERT_MODEL_TFLITE/: tokenizer.json  tokenizer_config.json
model_final/DISTILBERT_MODEL_TF_FULL/: added_tokens.json  config.json  tf_model.h5
modelisation/: import_model_final.ipynb
notebooks/: Nettoyage.ipynb
sentiment/: pyproject.toml
tests/: test_model.py
