[project]
name = "sentiment"
version = "0.1.0"
description = ""
authors = [
    {name = "joelle-jnbaptiste",email = "75635571+joelle-jnbaptiste@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "gensim (>=4.3.3)",
    "numpy (<2.0)",
    "jupyterlab (>=4.3.6,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "mlflow (>=2.21.0,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow-io-gcs-filesystem (<=0.37.1)"
]

[tool.poetry]
packages = [{include = "sentiment", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
